--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background: linear-gradient(135deg, #ffffff, #f0f0f0);
+  background: linear-gradient(135deg, #fff, #f0f0f0);
   color: #333;
   padding: 20px;
   display: flex;
@@ -16,7 +16,8 @@ body {
   min-height: 100vh;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #333;
   text-align: center;
   backdrop-filter: blur(10px);
@@ -44,12 +45,18 @@ h2 {
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   font-size: 1rem;
   margin: 10px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+nav .btn {
+  background: rgba(255, 255, 255, 0.6);
+  margin: 0 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
   background: rgba(255, 255, 255, 0.8);
-  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
@@ -61,7 +68,7 @@ table {
   border-collapse: collapse;
   margin: 0 auto 40px;
   background: rgba(255, 255, 255, 0.6);
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   backdrop-filter: blur(15px);
   overflow-x: auto;
@@ -73,7 +80,8 @@ thead {
   color: #333;
 }
 
-th, td {
+th,
+td {
   padding: 15px;
   text-align: center;
 }
@@ -107,18 +115,12 @@ nav {
   background: rgba(255, 255, 255, 0.6);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(15px);
 }
 
 nav div {
   display: flex;
-}
-
-nav .btn {
-  background: rgba(255, 255, 255, 0.6);
-  margin: 0 10px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 nav .btn:hover {
